--- a/src/main/webapp/views/search.html
+++ b/src/main/webapp/views/search.html
@@ -35,23 +35,29 @@
 			<span>
 				<div class="btn-toolbar pull-right" role="toolbar">
 					<div class="btn-group btn-group-sm">
-						<button type="button" class="btn btn-info" ng-click="sh = true"><span class="glyphicon glyphicon glyphicon-zoom-in"></span></button>
+						<button type="button" class="btn btn-info" ng-click="sh = true;btnUpCptviewClick(geek.id)"><span class="glyphicon glyphicon glyphicon-zoom-in"></span></button>
 						<button type="button" class="btn btn-info" ng-click="sh = false"><span class="glyphicon glyphicon glyphicon-zoom-out"></span></button>
 					</div>
 				</div>
 			</span>
 		</div>
 		<div ng-show="sh" classe="panel-body">
-			<div class="" >
+			<div class="col-md-4" >
 				<h4><span class="label label-success">Interets :</span></h4>
 				<span>{{geek.interests}}</span>
 			</div>
-			<div class="">
+			<div class="col-md-4">
 				<h4><span class="label label-warning">Avatar :</span></h4>
 				<span>
 					<img src='http://www.gravatar.com/avatar/{{geek.avatar}}' />
 				</span>
 			</div>
+			<div class="col-md-4">
+				<h4><span class="label label-danger">Nombre de vue :</span></h4>
+				<span class="nb_view">
+					{{geek.cptview}}
+				</span>
+			</div>			
 		</div>
 	</div>
 </div>			
