--- a/src/main/webapp/views/all.html
+++ b/src/main/webapp/views/all.html
@@ -1,11 +1,11 @@
 <div class="col-md-10">
 	<div class="row">
-		<div class="back-blue-1">
+		<div class="back-blue-1 img-rounded">
 			<h3> Liste de tous les geek : </h3>
 		</div>
 	</div>
 	<div class="row">
-		<div class="back-grey-1">
+		<div class="back-grey-1 img-rounded">
 			<h3> Filtrer par : </h3>
 		</div>		
 	</div>
@@ -64,7 +64,7 @@
 				</div>
 				<div class="col-md-4">
 					<h4><span class="label label-danger">Nombre de vue :</span></h4>
-					<span class="nb_view">
+					<span class="nb_view img-rounded">
 						{{geek.cptview}}
 					</span>
 				</div>
