--- a/src/main/webapp/views/search.html
+++ b/src/main/webapp/views/search.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="back-grey-1">
+	<div class="back-grey-1 img-rounded">
 		<h3> Recherche par sexe </h3>
 	</div>		
 </div>
@@ -22,7 +22,7 @@
 	</div>		
 </form>
 <div class="row">
-	<div class="back-grey-1">
+	<div class="back-grey-1 img-rounded">
 		<h3> Resultat :</h3>
 	</div>
 </div>		
@@ -54,7 +54,7 @@
 			</div>
 			<div class="col-md-4">
 				<h4><span class="label label-danger">Nombre de vue :</span></h4>
-				<span class="nb_view">
+				<span class="nb_view img-rounded">
 					{{geek.cptview}}
 				</span>
 			</div>			
